--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "httpie (>=3.2.4,<4.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "mypy (>=1.14.1,<2.0.0)"
 ]
 
 
