--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "httpie (>=3.2.4,<4.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "mypy (>=1.14.1,<2.0.0)"
+    "mypy (>=1.14.1,<2.0.0)",
+    "faker (>=35.0.0,<36.0.0)"
 ]
 
 
