--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,14 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "mypy (>=1.14.1,<2.0.0)",
-    "faker (>=35.0.0,<36.0.0)"
+    "faker (>=35.0.0,<36.0.0)",
+    "pytest (>=8.3.4,<9.0.0)",
+    "opentelemetry-api (>=1.29.0,<2.0.0)",
+    "opentelemetry-sdk (>=1.29.0,<2.0.0)",
+    "opentelemetry-distro (>=0.50b0,<0.51)",
+    "opentelemetry-exporter-otlp (>=1.29.0,<2.0.0)",
+    "prometheus-api-client (>=0.5.5,<0.6.0)",
+    "pyroscope-io (>=0.8.8,<0.9.0)"
 ]
 
 
