--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "opentelemetry-distro (>=0.50b0,<0.51)",
     "opentelemetry-exporter-otlp (>=1.29.0,<2.0.0)",
     "prometheus-api-client (>=0.5.5,<0.6.0)",
-    "pyroscope-io (>=0.8.8,<0.9.0)"
+    "pyroscope-io (>=0.8.8,<0.9.0)",
+    "python-decouple (>=3.8,<4.0)"
 ]
 
 
