--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ dependencies = [
     "opentelemetry-exporter-otlp (>=1.29.0,<2.0.0)",
     "prometheus-api-client (>=0.5.5,<0.6.0)",
     "pyroscope-io (>=0.8.8,<0.9.0)",
-    "python-decouple (>=3.8,<4.0)"
+    "python-decouple (>=3.8,<4.0)",
+    "python-jose (>=3.3.0,<4.0.0)",
+    "passlib (>=1.7.4,<2.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
 
