--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "^3.12"
 dependencies = [
     "fastapi (>=0.115.7,<0.116.0)",
-    "uvicorn (>=0.34.0,<0.35.0)",
+    "uvicorn[standard] (>=0.34.0,<0.35.0)",
     "httpie (>=3.2.4,<4.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
@@ -26,7 +26,12 @@ dependencies = [
     "python-decouple (>=3.8,<4.0)",
     "python-jose (>=3.3.0,<4.0.0)",
     "passlib (>=1.7.4,<2.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "hypothesis (>=6.125.1,<7.0.0)",
+    "schemathesis (>=3.39.9,<4.0.0)",
+    "locust (>=2.32.8,<3.0.0)",
+    "locust-grasshopper (>=1.3.27,<2.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 
