--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ dependencies = [
     "schemathesis (>=3.39.9,<4.0.0)",
     "locust (>=2.32.8,<3.0.0)",
     "locust-grasshopper (>=1.3.27,<2.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)"
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "torch (>=2.6.0,<3.0.0)",
+    "torchvision (>=0.21.0,<0.22.0)",
+    "transformers (>=4.48.2,<5.0.0)"
 ]
 
 
