--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "torch (>=2.6.0,<3.0.0)",
     "torchvision (>=0.21.0,<0.22.0)",
-    "transformers (>=4.48.2,<5.0.0)"
+    "transformers (>=4.48.2,<5.0.0)",
+    "aiofiles (>=24.1.0,<25.0.0)"
 ]
 
 
