--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,9 @@ dependencies = [
     "torch (>=2.6.0,<3.0.0)",
     "torchvision (>=0.21.0,<0.22.0)",
     "transformers (>=4.48.2,<5.0.0)",
-    "aiofiles (>=24.1.0,<25.0.0)"
+    "aiofiles (>=24.1.0,<25.0.0)",
+    "tabulate (>=0.9.0,<0.10.0)",
+    "plotly (>=6.0.0,<7.0.0)"
 ]
 
 
