--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
     "transformers (>=4.48.2,<5.0.0)",
     "aiofiles (>=24.1.0,<25.0.0)",
     "tabulate (>=0.9.0,<0.10.0)",
-    "plotly (>=6.0.0,<7.0.0)"
+    "plotly (>=6.0.0,<7.0.0)",
+    "folium (>=0.19.4,<0.20.0)"
 ]
 
 
